objects/eOrder_Item__c.object
<CustomObject>
    <fields>
        <fullName>Delivery_Date__c</fullName>
        <description>GAS Application</description>
        <inlineHelpText>Delivery Date by Vendor</inlineHelpText>
        <label>Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Item_Price__c</fullName>
        <formula>Product__r.List_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Item Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Order_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Request</label>
        <referenceTo>Order_Request__c</referenceTo>
        <relationshipLabel>Order Request Items</relationshipLabel>
        <relationshipName>eOrder_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pickup_Date__c</fullName>
        <description>GAS Application</description>
        <inlineHelpText>Cylinder Pick up Date by user.</inlineHelpText>
        <label>Pickup Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Product_Active__c</fullName>
        <formula>IF( Product__r.Active__c , TRUE, FALSE)</formula>
        <label>Product Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <formula>Product__r.Product_Code__c</formula>
        <label>Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Description__c</fullName>
        <formula>Product__r.Description__c</formula>
        <label>Product Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_List_Price__c</fullName>
        <formula>Product__r.List_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Size__c</fullName>
        <description>Gas Application. Gets the parent product size.</description>
        <formula>Product__r.Size__c</formula>
        <label>Product Size</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <formula>TEXT(Product__r.Product_Type__c)</formula>
        <label>Product Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Vendor__c</fullName>
        <formula>Product__r.Vendor__r.Name</formula>
        <label>Product Vendor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Choose a Product by searching for Product details</description>
        <inlineHelpText>Choose a Product by searching for Product details</inlineHelpText>
        <label>Product</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>EPA_Product__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>EPA_Product__c.Vendor__r.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>EPA_Product__c</referenceTo>
        <relationshipLabel>eOrder Items</relationshipLabel>
        <relationshipName>eOrder_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <description>Number of cylinders requested</description>
        <inlineHelpText>Number of cylinders requested</inlineHelpText>
        <label>Quantity</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>The current state of this item</description>
        <inlineHelpText>The current state of this item</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New Order</fullName>
                    <default>true</default>
                    <label>New Order</label>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Request Approved</fullName>
                </value>
                <value>
                    <fullName>Added to Order</fullName>
                </value>
                <value>
                    <fullName>Order Placed</fullName>
                </value>
                <value>
                    <fullName>Order Received</fullName>
                </value>
                <value>
                    <fullName>Order Delivered</fullName>
                </value>
                <value>
                    <fullName>Added to 1900-63</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Price__c</fullName>
        <formula>Product__r.List_Price__c * Quantity__c</formula>
        <label>Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vendor_Name__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Vendor Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>eOrder Items</relationshipLabel>
        <relationshipName>eOrder_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>X1900_63_Generated_Date__c</fullName>
        <label>1900-63 Generated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X1900_63__c</fullName>
        <defaultValue>false</defaultValue>
        <label>1900-63</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>eOrder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>eOrder</label>
        <referenceTo>eOrders__c</referenceTo>
        <relationshipLabel>eOrder Items</relationshipLabel>
        <relationshipName>eOrder_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <description>Specific or detailed items within an order tracked in the eOrders document, initially for the GAS application.  (Similar to Line Items, into which this item might be merged someday.)</description>
    <label>eOrder Item</label>
    <nameField>
        <displayFormat>EPA-EOI-{000000000}</displayFormat>
        <label>eOrder Item ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>eOrder Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>GAS_All_eOrder_Items</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <label>GAS All eOrder Items</label>
    </listViews>
    <listViews>
        <fullName>GAS_eOrder_Items</fullName>
        <columns>NAME</columns>
        <columns>eOrder__c</columns>
        <columns>Order_Request__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Status__c</columns>
        <columns>Total_Price__c</columns>
        <filterScope>Everything</filterScope>
        <label>GAS eOrder Items</label>
    </listViews>
    <recordTypes>
        <fullName>GAS_eOrder_Item</fullName>
        <active>true</active>
        <description>GAS Aquisition System</description>
        <label>GAS eOrder Item</label>
    </recordTypes>
</CustomObject>